--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.6
+  flutter_rating: ^2.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
